# zkmatcher

./: .gitignore  Cargo.toml
circuits/: matcher.circom  matcher.r1cs  matcher.sym  matcher.wasm  sparse_merkle_tree.circom
src/: circuit.rs  lib.rs  main.rs  r1cs.rs  utils.rs  witness.rs
